# Renderer

./: CMakeLists.txt
include/: AABB.hpp  Camera.hpp  HitInfo.hpp  Image.hpp  ImagePlane.hpp  Ray.hpp  Scene.hpp  Transformation.hpp  Utils.hpp  box.hpp
include/catch2/: catch.hpp
include/lights/: Light.hpp  PointLight.hpp
include/loaders/: xml_loader.hpp
include/materials/: BasicMaterial.hpp  EmittingMaterial.hpp  Material.hpp
include/materials/BRDF/: ModifiedBlinnPhong.hpp
include/shapes/: LightMesh.hpp  Mesh.hpp  Shape.hpp  Sphere.hpp  Triangle.hpp
inputs/: cornellbox_ldr.xml
src/: AABB.cpp  Camera.cpp  HitInfo.cpp  ImagePlane.cpp  Scene.cpp  Transformation.cpp  gpt_base.cpp  main.cpp
src/lights/: Light.cpp  PointLight.cpp
src/loaders/: CMakeLists.txt  xml_loader.cpp
src/materials/: BasicMaterial.cpp  EmittingMaterial.cpp  Material.cpp
src/materials/BRDF/: ModifiedBlinnPhong.cpp
src/shapes/: LightMesh.cpp  Mesh.cpp  Shape.cpp  Sphere.cpp  Triangle.cpp
src/tinyxml/: tinyxml2.cpp
test/: hit_test.cpp
